po: update po/nl_NL/event.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/event.po
+++ b/po/nl_NL/event.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-15 13:58+0000\n"
+"PO-Revision-Date: 2016-06-23 19:20+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -1425,7 +1425,7 @@ msgstr "Verplicht veld ontbreekt: Deelnemer ID"
 
 #: CRM/Event/Import/Form/MapField.php
 msgid "Or Provide Contact ID or External ID."
-msgstr "Of vermeld Contactnummer of Extern nummer."
+msgstr "Of vermeld Contact-ID of Externe-ID."
 
 #: CRM/Event/Import/Form/MapField.php
 msgid "Duplicate Import Participant Mapping Name"
@@ -2032,7 +2032,7 @@ msgid ""
 "When this Event is active, create front-end links to the Event Information "
 "page using the Menu Manager. Select <strong>Event Info Page</strong> and "
 "enter <strong>%1</strong> for the Event ID."
-msgstr "Maak, als dit evenement actief is, met gebruik van menubeheer aan de publieke kant links naar de informatiepagina. Selecteer <strong>Evenement Informatiepagina</strong> en voer <strong>%1</strong> in bij evenementnummer."
+msgstr "Maak, als dit evenement actief is, met gebruik van menubeheer weblinks aan naar de informatiepagina. Selecteer <strong>Evenement Informatiepagina</strong> en voer <strong>%1</strong> in als evenement-ID."
 
 #: templates/CRM/Event/Form/ManageEvent/Fee.tpl
 msgid ""
@@ -3036,7 +3036,7 @@ msgid ""
 "'External ID' for each new contact which you can then use to match "
 "participant info such as event registration to the corresponding contact "
 "record. Then return to this screen and import the participant records."
-msgstr "Het importeren van deelnemers vereist dat de personen, huishoudens en organisaties al als contact bekend zijn in uw CiviCRM database. Als er deelnemers zijn die nog niet als contact bekend zijn in CiviCRM, dan moet u twee stappen doorlopen. Gebruik eerst <strong>Contacten importeren</strong> om de contacten toe te voegen. Voeg, indien mogelijk, een uniek 'extern nummer' toe aan elk nieuw contact dat u kunt gebruiken om deelnemersinfo zoals inschrijvingen voor evenementen aan het bijbehorende contactrecord te koppelen. Keer vervolgens terug naar dit scherm en importeer de deelnemersrecords."
+msgstr "Het importeren van deelnemers vereist dat de personen, huishoudens en organisaties al als contact bekend zijn in uw CiviCRM database. Als er deelnemers zijn die nog niet als contact bekend zijn in CiviCRM, dan moet u twee stappen doorlopen. Gebruik eerst <strong>Contacten importeren</strong> om de contacten toe te voegen. Voeg, indien mogelijk, een uniek 'externe-ID' toe aan elk nieuw contact dat u kunt gebruiken om deelnemersinfo zoals inschrijvingen voor evenementen aan het bijbehorende contactrecord te koppelen. Keer vervolgens terug naar dit scherm en importeer de deelnemersrecords."
 
 #: templates/CRM/Event/Import/Form/DataSource.hlp
 msgid "Matching Participant Data to Contacts"
@@ -3057,7 +3057,7 @@ msgid ""
 "External ID. Please note that you must use an \"On Duplicate Entries\" "
 "setting of \"Skip\" or \"No Duplicate Checking\" to be able to upload using "
 "the External ID field."
-msgstr "Als er een uniek <strong>externe id</strong> voor elke contact in CiviCRM is opgeslagen, kunt u die waarde als een kolom meenemen in het invoerbestand. Gegevens van deelnemers zullen dan worden gematcht op basis van het extern nummer. Bij de import moet u dan wel aangeven dat bij dubbelen \"Overslaan\" of \"Geen controle\" om het externe veld te kunnen uploaden. "
+msgstr "Als er een uniek <strong>externe-ID</strong> voor elke contact in CiviCRM is opgeslagen, kunt u die waarde als een kolom meenemen in het invoerbestand. Gegevens van deelnemers zullen dan worden gematcht op basis van het extern nummer. Bij de import moet u dan wel aangeven dat bij dubbelen \"Overslaan\" of \"Geen controle\" om het externe-ID te kunnen uploaden. "
 
 #: templates/CRM/Event/Import/Form/DataSource.hlp
 msgid ""
@@ -3081,7 +3081,7 @@ msgid ""
 "an 'External Identifier' (if you are using those in your contact records), "
 "OR the property defined in your Unsupervised Duplicate Matching rule (which "
 "is Email Address by default)."
-msgstr "Bij het opvoeren van inschrijvingen moet er een kolom in de invoer zijn die verwijst naar een bestaand contact. U kunt het 'Intern contactnummer', een  'Extern nummer' of het/de veld(en) in de 'zonder toezicht' overeenkomstregel (standaard het e-mailadres) gebruiken."
+msgstr "Bij het opvoeren van inschrijvingen moet er een kolom in de invoer zijn die verwijst naar een bestaand contact. U kunt het 'Intern contactnummer', een  'Externe-ID' of het/de veld(en) in de 'zonder toezicht' overeenkomstregel (standaard het e-mailadres) gebruiken."
 
 #: templates/CRM/Event/Import/Form/DataSource.hlp
 msgid ""
