po: update po/nl_NL/pcp.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/pcp.po
+++ b/po/nl_NL/pcp.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-14 17:21+0000\n"
+"PO-Revision-Date: 2016-06-23 19:31+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -378,7 +378,7 @@ msgstr "De gevraagde webpagina kan niet worden geladen omdat de link incompleet 
 
 #: CRM/PCP/Form/PCPAccount.php
 msgid "Could not find source page id."
-msgstr "Kon bron pagina id niet vinden."
+msgstr "Het id van de bronpagina is niet gevonden."
 
 #: CRM/PCP/Form/PCPAccount.php
 msgid ""
@@ -519,7 +519,7 @@ msgid ""
 "other fields in the profile. If you don't yet have an appropriate Profile "
 "configured, you will need to <a href='%1'>create one first</a>, and then "
 "return to this form to select it."
-msgstr "Het supporter profiel wordt gebruikt om informatie te verzamelen of te bewerken (bijvoorbeeld naam en e-mailadres) van gebruikers terwijl zij een persoonlijke campagnepagina maken. Het profiel kunt u instellen door  'Toestaan gebruikersregistratie' aan te vinken (onder Profiel instellingen  &raquo; Geavanceerde instellingen). Er dient een veld te zijn voor een e-mailadres. Als u nog geen passend profiel heeft ingesteld, <a href='%1'>maak dan hier een profiel aan</a> en keer dan terug naar dit formulier. "
+msgstr "Het supportersprofiel wordt gebruikt om informatie te verzamelen of te bewerken (bijvoorbeeld naam en e-mailadres) van gebruikers terwijl zij een persoonlijke campagnepagina maken. Het profiel kunt u instellen door  'Toestaan gebruikersregistratie' aan te vinken (onder Profiel instellingen  &raquo; Geavanceerde instellingen). Er dient een veld te zijn voor een e-mailadres. Als u nog geen passend profiel heeft ingesteld, <a href='%1'>maak dan hier een profiel aan</a> en keer dan terug naar dit formulier. "
 
 #: templates/CRM/PCP/Form/Contribute.tpl templates/CRM/PCP/Form/Event.tpl
 msgid ""
@@ -527,7 +527,7 @@ msgid ""
 "enabled for your site. You need to <a href='%1'>configure a Supporter "
 "profile</a> first. It will be used to collect or update basic information "
 "from users while they are creating a Personal Campaign Page."
-msgstr "Er is geen profiel ingesteld / geactiveerd dat gebruikt kan worden bij de registratie van gebruikers van deze site. U moet dan eerst <a href='%1'>een supporter profiel instellen</a>. Dit zal worden gebruikt om informatie te verzamelen of bewerken van gebruikers die een persoonlijke campagnepagina willen maken."
+msgstr "Er is geen profiel ingesteld of geactiveerd dat gebruikt kan worden bij de registratie van gebruikers van deze site. U moet dan eerst <a href='%1'>een supportersprofiel instellen</a>. Dit zal worden gebruikt om informatie te verzamelen of te bewerken van gebruikers die een persoonlijke campagnepagina willen maken."
 
 #: templates/CRM/PCP/Form/Event.hlp
 msgid ""
