po: update po/nl_NL/drupal-civicrm.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/drupal-civicrm.po
+++ b/po/nl_NL/drupal-civicrm.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2011-03-27 21:13+0200\n"
-"PO-Revision-Date: 2016-06-13 13:38+0000\n"
+"PO-Revision-Date: 2016-06-23 19:30+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -583,7 +583,7 @@ msgid ""
 "used for 'Profile' listings in its Settings OR there is no Profile with that"
 " ID OR you do not have permission to access this profile. Please contact the"
 " site administrator if you need assistance."
-msgstr "Het gevraagde Profiel (gid=%1) is uitgeschakeld OF niet ingesteld om gebruikt te worden als 'overzichten' OF het Profiel met dit ID bestaat niet OF u heeft geen toegang tot dit Profiel. Neem voor hulp contact op met de beheerder."
+msgstr "Het gevraagde profiel (gid=%1) is uitgeschakeld OF niet ingesteld om gebruikt te worden bij overzichten OF het profiel bestaat niet OF u heeft geen toegang tot dit profiel. Neem voor hulp contact op met de beheerder."
 
 #: drupal/civicrm.module
 msgid "View Contact Record"
@@ -1402,7 +1402,7 @@ msgstr "Notitie op persoonlijke campagnepagina "
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "The Personal note form PCP"
-msgstr "De aantekening van PCP"
+msgstr "De notitie van PCP"
 
 #: drupal/modules/views/civicrm.views.inc
 msgid "CiviCRM  Recurring Contributions"
@@ -2935,7 +2935,7 @@ msgstr "Zoek a.u.b. op 'Wordt aangehouden' en 'Enquête ID' om deze actie uit te
 msgid ""
 "Could not find contacts for release voters resevation Or Missing Interviewer"
 " contact."
-msgstr "Er zijn geen contacten die vrijgegeven konden worden als stemmer. Misschien ontbreekt de interviewer."
+msgstr "Er zijn geen contacten die als stemmer vrijgegeven kunnen worden. Misschien ontbreekt de interviewer."
 
 #: drupal/modules/civicrm_engage/Engage/Contact/Form/Task/ReleaseVoters.php
 msgid "All voters held by you are already released for this survey."
