--- a/po/pt_BR/admin.po
+++ b/po/pt_BR/admin.po
@@ -12,6 +12,7 @@
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2011,2013
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2013
 # Finks Costa <finkseletronica28@gmail.com>, 2015
+# Gilvanilson Santos <grupogvsantos@gmail.com>, 2016
 # Gustavo Rodrigues da Silva <gustavo.arjuna@gmail.com>, 2015
 # João Fagner Fonseca de Oliveira <fagworio@gmail.com>, 2016
 # Leila Otto Algarve <leila.algarve@gmail.com>, 2015
@@ -26,8 +27,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-24 15:35+0000\n"
+"Last-Translator: Gilvanilson Santos <grupogvsantos@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -274,7 +275,7 @@ msgstr "O Domínio do email deve usar um formato de domínio válido (dominio.co
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Localpart"
-msgstr ""
+msgstr "Parte Local"
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Return-Path"
@@ -286,7 +287,7 @@ msgstr "Caminho de Retorno precisa de um email válido."
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
-msgstr ""
+msgstr "Servidor"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Bounce Processing"
@@ -998,11 +999,11 @@ msgstr "Salvo o Tipo de Relacionamento."
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email"
-msgstr ""
+msgstr "Enviar email"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Record activity for automated email"
-msgstr ""
+msgstr "Registrar atividade para e-mail automatizado"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Send email or SMS"
@@ -1018,19 +1019,19 @@ msgstr "Enviar como"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "before"
-msgstr ""
+msgstr "antes"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "after"
-msgstr ""
+msgstr "depois"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Action Condition"
-msgstr ""
+msgstr "Condição de Ação"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Repetition Condition"
-msgstr ""
+msgstr "Condição de Repetição"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "From Email"
