po: update po/ru_RU/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ru_RU/common-base.po
+++ b/po/ru_RU/common-base.po
@@ -29,7 +29,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-22 18:16+0000\n"
+"PO-Revision-Date: 2016-06-24 10:47+0000\n"
 "Last-Translator: Фёдор Ходьков <fkhodkov@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
@@ -10341,7 +10341,7 @@ msgstr "Осуществлять поиск по этому полю?"
 
 #: CRM/Custom/Form/Field.php
 msgid "Search by Range?"
-msgstr "Осуществлять поиск по этому набору полей?"
+msgstr "Поиск по интервалу?"
 
 #: CRM/Custom/Form/Field.php
 msgid "Custom field '%1' already exists in Database."
