po: update po/nl_NL/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-base.po
+++ b/po/nl_NL/common-base.po
@@ -22,7 +22,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-23 19:07+0000\n"
+"PO-Revision-Date: 2016-06-25 14:06+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -6382,7 +6382,7 @@ msgid ""
 "enabled in your browser settings. Please check this setting and enable "
 "cookies (if they are not enabled). Then try again. If this error persists, "
 "contact the site adminstrator for assistance."
-msgstr "De gevraagde web pagina kan niet geladen worden. De pagina verwacht dat cookies aan staan in de instellingen van je browser. Controleer deze instelling en sta het gebruik van cookies toe (als dat nog niet zo is). Probeer dan opnieuw. Als deze fout weer optreedt, neem dan contact op met de beheerder voor verdere hulp."
+msgstr "De gevraagde webpagina kan niet geladen worden. De pagina verwacht dat cookies aan staan in de instellingen van uw webbrowser. Controleer deze instelling en sta het gebruik van cookies toe (als dat nog niet zo is). Probeer dan opnieuw. Als deze fout weer optreedt, neem dan contact op met de beheerder voor verdere hulp."
 
 #: CRM/Core/Controller.php
 msgid ""
@@ -10823,7 +10823,7 @@ msgstr "Exporteer alles of geselecteerde velden"
 
 #: CRM/Export/Form/Select.php
 msgid "Use Saved Field Mapping"
-msgstr "Gebruik opgeslagen veldmapping"
+msgstr "Gebruik opgeslagen koppeltabel"
 
 #: CRM/Friend/BAO/Friend.php CRM/Friend/Form/Contribute.php
 #: CRM/Friend/Form/Event.php xml/templates/civicrm_data.tpl
@@ -13253,7 +13253,7 @@ msgstr "Controleer of u nog bent ingelogd en of u toegangsrecht hebt voor deze f
 msgid ""
 "Unable to reach the server. Please refresh this page in your browser and try"
 " again."
-msgstr "Geen verbinding met de server. Ververs deze pagina in uw browser en probeer het opnieuw."
+msgstr "Geen verbinding met de server. Ververs deze pagina in uw webbrowser en probeer het opnieuw."
 
 #: js/crm.ajax.js
 msgid "Print window"
@@ -13286,7 +13286,7 @@ msgstr "Revisies"
 #: templates/CRM/Contact/Form/Edit/CommunicationPreferences.tpl
 #: templates/CRM/Contact/Form/Inline/CommunicationPreferences.tpl
 msgid "Click to edit"
-msgstr "Klik op te wijzigen"
+msgstr "Klik om te wijzigen"
 
 #: js/jquery/jquery.dashboard.js
 msgid "Configure this dashlet"
@@ -14050,7 +14050,7 @@ msgid ""
 "Click 'Load Saved Field Mapping' if data has been previously imported from "
 "the same source. You can then select the saved import mapping setup and load"
 " it automatically."
-msgstr "Klik 'Laad opgeslagen veldmapping', als er al eerder een bestand van dezelfde bron is geïmporteerd."
+msgstr "Klik 'Laad opgeslagen koppeltabel', als er al eerder een bestand van dezelfde bron is geïmporteerd."
 
 #: templates/CRM/Activity/Import/Form/MapField.tpl
 #: templates/CRM/Contact/Import/Form/MapField.tpl
@@ -14558,7 +14558,7 @@ msgid ""
 "blank and use the Shared Address feature in the Address pane below to create"
 " the employer record AND enter the employer address. The 'current employer' "
 "relationship will be automatically created for you."
-msgstr "U kunt hier een bestaande organisatie selecteren OF de naam van een nieuwe organisatie typen als de werkgever nog niet in uw database staat. Wilt u echter het werkadres van deze persoon delen met diens werkgever EN die werkgever bestaat nog niet, laat dit veld dan leeg en gebruik de functie 'Gedeeld adres' in het paneel 'Adres' hieronder om de werkgever te registreren EN het werkgeversadres in te vullen. De relatie 'huidige werkgever' wordt automatisch gelegd."
+msgstr "U kunt hier een bestaande organisatie selecteren OF de naam van een nieuwe organisatie typen als de werkgever nog niet in uw database staat. Wilt u echter het werkadres van deze persoon delen met diens werkgever EN die werkgever bestaat nog niet, laat dit veld dan leeg en gebruik de functie 'Gedeeld adres' in het paneel 'Adres' hieronder om de werkgever te registreren en het werkgeversadres in te vullen. De relatie 'huidige werkgever' wordt automatisch gelegd."
 
 #: templates/CRM/Contact/Form/Contact.hlp
 msgid ""
@@ -15195,7 +15195,7 @@ msgstr "Contacten met een van de geselecteerde privacy opties zijn standaard UIT
 msgid ""
 "If you want to FIND (include) contacts with a particular privacy option set,"
 " then click the 'Include' radio button."
-msgstr "Als u ook contacten wilt vinden waarvan een privacy optie gezet is, gebruik dan de 'Include' radio button."
+msgstr "Als u ook contacten wilt vinden waarvan een privacy optie gezet is, gebruik dan de optie 'Inclusief'."
 
 #: templates/CRM/Contact/Form/Search/Advanced.hlp
 msgid "Multiple Privacy Options"
@@ -16058,7 +16058,7 @@ msgid ""
 "NOTE: If you are composing HTML-formatted messages, you may want to enable a"
 " Rich Text (WYSIWYG) editor (Administer &raquo; Customize Data & Screens "
 "&raquo; Display Preferences)."
-msgstr "NB: Als u berichten met HTML maakt, dan wilt u waarschijnlijk een Rich Text (WYSIWYG) editor inschakelen  (Beheer &raquo; Aangepaste gegevens & schermen &raquo;  Tonen Voorkeuren)."
+msgstr "NB: Als u berichten met HTML maakt, dan wilt u waarschijnlijk een Rich Text (WYSIWYG) editor inschakelen  (Beheer &raquo; Aangepaste gegevens en schermen &raquo;  Tonen Voorkeuren)."
 
 #: templates/CRM/Contact/Form/Task/EmailCommon.tpl
 msgid "Plain-Text Format"
@@ -16654,7 +16654,7 @@ msgid ""
 "(from Administer > Customize Data and Screens > Navigation Menu). As new "
 "custom searches become available they can be viewed (and installed if "
 "useful) from Administer > System Settings > Manage Extensions."
-msgstr "Deze zijn ontwikkelt en bijgedragen door leden van de CiviCRM-gemeenschap. Als u vaak op een eigen manier zoekt dan kunt u deze manier vastleggen  (Beheer >  Aangepaste gegevens & schermen > Navigatiemenu). Als er nieuwe aangepaste zoekmanieren zijn dan kunt u ze bekijken (en indien gewenst installeren) met Beheer > Systeeminstellingen > Extensies beheren."
+msgstr "Deze zoekopdrachten zijn ontwikkelt door leden van de CiviCRM-gemeenschap. Als u vaak op een eigen manier zoekt dan kunt u deze manier vastleggen  (Beheer >  Aangepaste gegevens en schermen > Navigatiemenu). Als er nieuwe aangepaste zoekmanieren zijn dan kunt u ze bekijken (en indien gewenst installeren) met Beheer > Systeeminstellingen > Extensies beheren."
 
 #: templates/CRM/Contact/Page/CustomSearch.hlp
 msgid ""
@@ -19383,7 +19383,7 @@ msgstr "Kies de SMS-provider voor deze massa-SMS uit de lijst."
 msgid ""
 "Go to <a href='%1'>Administer CiviCRM &raquo; System Settings &raquo; SMS "
 "Providers</a> to add or edit SMS Provider."
-msgstr "Ga naar <a href='%1'>Beheer &raquo; Systeeminstellingen &raquo; SMS Providers</a> om SMS providers toe te voegen of te wijzigen.."
+msgstr "Ga naar <a href='%1'>Beheer &raquo; Systeeminstellingen &raquo; SMS Providers</a> om SMS providers toe te voegen of te wijzigen."
 
 #: templates/CRM/SMS/Form/Upload.hlp
 msgid ""
