--- a/po/nl_NL/admin.po
+++ b/po/nl_NL/admin.po
@@ -13,7 +13,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-23 19:10+0000\n"
+"PO-Revision-Date: 2016-06-25 14:01+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -310,7 +310,7 @@ msgstr "Wijzigingen niet opgeslagen."
 
 #: CRM/Admin/Form/Mapping.php
 msgid "Field Mapping"
-msgstr "Veldmapping"
+msgstr "Koppeltabel"
 
 #: CRM/Admin/Form/MessageTemplates.php
 #: templates/CRM/Admin/Page/MessageTemplates.hlp
@@ -2351,7 +2351,7 @@ msgstr "Verbinding verbroken"
 msgid ""
 "The page \"%1\" will open in a popup. If it does not appear automatically, "
 "check your browser for notifications."
-msgstr "De pagina \"%1\" opent in een pop-up. Verschijnt hij niet automatisch, controleer dan uw browser op meldingen."
+msgstr "De pagina \"%1\" opent in een pop-up. Verschijnt hij niet automatisch, controleer dan uw webbrowser op meldingen."
 
 #: ang/crmCxn/ManageCtrl.js
 msgid "Cannot open link. Unrecognized mode."
@@ -6517,7 +6517,7 @@ msgstr "Opslaan mislukt"
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid ""
 "You may need to clear your browser's cache to see the changes in CiviCRM."
-msgstr "Mogelijk moet u de cache van uw browser leegmaken om de wijzigingen in CiviCRM te zien."
+msgstr "Mogelijk moet u de cache van uw webbrowser leegmaken om de wijzigingen in CiviCRM te zien."
 
 #: CRM/Admin/Page/CKEditorConfig.php
 msgid "CKEditor Saved"
