--- a/po/nl_NL/contribute.po
+++ b/po/nl_NL/contribute.po
@@ -20,7 +20,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-23 19:24+0000\n"
+"PO-Revision-Date: 2016-06-25 13:57+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -1035,7 +1035,7 @@ msgstr "Organisatiegegevens"
 
 #: CRM/Contribute/Form/Contribution/OnBehalfOf.php
 msgid "Select an existing related Organization OR enter a new one"
-msgstr "Kies een bestaande organisatie OF voeg een nieuwe organisatie toe."
+msgstr "Kies een bestaande organisatie of voeg een nieuwe organisatie toe."
 
 #: CRM/Contribute/Form/Contribution/OnBehalfOf.php
 msgid "Select an existing organization"
@@ -2407,7 +2407,7 @@ msgstr "Voer de tekst in die u vooraan wilt toevoegen in het ontvangstbewijs."
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid "Net value of the payment (Total Amount minus Fee)."
-msgstr "Netto bedrag van de betaling (Totaalbedrag minus kosten)."
+msgstr "Netto bedrag van de betaling (Totaalbedrag min kosten)."
 
 #: templates/CRM/Contribute/Form/AdditionalPayment.tpl
 msgid ""
@@ -3309,7 +3309,7 @@ msgstr "Voer hier het inleidende bericht in. Dit wordt onder de paginatitel geto
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid "Footer Content"
-msgstr "Afsluiting inhoud"
+msgstr "Voettekst"
 
 #: templates/CRM/Contribute/Form/ContributionPage/Settings.hlp
 msgid ""
@@ -4895,7 +4895,7 @@ msgstr "Dit lidmaatschap wordt automatisch verlengd elke %1 %2."
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
 msgid "Thanks for your recurring contribution sign-up."
-msgstr "Dank U wel voor het aanmelden voor een periodieke bijdrage."
+msgstr "Dank u wel voor het aanmelden voor een periodieke bijdrage."
 
 #: xml/templates/message_templates/contribution_recurring_notify_html.tpl
 #: xml/templates/message_templates/contribution_recurring_notify_text.tpl
