--- a/po/nl_NL/menu.po
+++ b/po/nl_NL/menu.po
@@ -21,8 +21,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-21 19:16+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"PO-Revision-Date: 2016-06-25 13:51+0000\n"
+"Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1168,7 +1168,7 @@ msgstr "Toelagen zoeken"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Grant"
-msgstr "Nieuwe toelage"
+msgstr "Toelage toevoegen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
