po: update po/nl_NL/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/common-components.po
+++ b/po/nl_NL/common-components.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-23 18:51+0000\n"
+"PO-Revision-Date: 2016-06-25 13:38+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -1529,7 +1529,7 @@ msgid ""
 "re-usable <strong>message footer</strong>. Refer to the online documentation"
 " for details on how to include required links and contact information as "
 "well as sample messages."
-msgstr "CiviMail e-mailberichten moeten een <strong>opt-out</strong> link (&quot;Opt-out via een webpagina&quot;) en het <strong>postadres</strong> van uw organisatie bevatten. Hierdoor verkleint u de kans dat de e-mail als SPAM gezien wordt. U kunt deze velden opnemen in de hoofdtekst van het bericht, maar ze ook in een herbruikbare <strong>voettekst</strong> plaatsen. Lees de online documentatie voor informatie over hoe u de verplichte links en contactgegevens op kunt nemen en voor voorbeelden."
+msgstr "CiviMail e-mailberichten moeten een <strong>opt-out</strong> link (&quot;Opt-out via een webpagina&quot;) en het <strong>postadres</strong> van uw organisatie bevatten. Hierdoor verkleint u de kans dat de e-mail als SPAM gezien wordt. U kunt deze velden opnemen in de hoofdtekst van het bericht, maar ze ook in een herbruikbare <strong>voettekst</strong> plaatsen. Lees de online documentatie voor informatie en voorbeelden over hoe u de verplichte links en contactgegevens kunt opnemen."
 
 #: templates/CRM/Contribute/Form/Task/Invoice.hlp
 #: templates/CRM/Mailing/Form/Upload.hlp
