po: update po/nl_NL/mailing.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/nl_NL/mailing.po
+++ b/po/nl_NL/mailing.po
@@ -15,7 +15,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-23 18:18+0000\n"
+"PO-Revision-Date: 2016-06-25 13:55+0000\n"
 "Last-Translator: HanV <han.velthuis@home.nl>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
@@ -2016,14 +2016,14 @@ msgid ""
 "Click <strong>Submit Mailing</strong> to add this mailing to the mailing "
 "queue. An automated task which runs periodically on your server processes "
 "mailings in the queue, and starts actually sending out your mail."
-msgstr "Klik op <strong>Mailing indienen</strong> om de mailing toe te voegen aan de mailwachtrij. Een taak die automatisch periodiek wordt gestart op uw server verwerkt de mailings die in de wachtrij staan en begint ze daadwerkelijk te verzenden."
+msgstr "Klik op <strong>Mailing indienen</strong> om de mailing toe te voegen aan de mailwachtrij. Een taak die automatisch periodiek wordt gestart op uw server om de mailings die in de wachtrij staan daadwerkelijk te verzenden."
 
 #: templates/CRM/Mailing/Form/Schedule.hlp
 msgid ""
 "Click <strong>Continue Later</strong> if you're not ready to schedule or "
 "send this mailing. Click the <strong>Continue</strong> link from Unscheduled"
 " and Draft Mailings when you are ready to schedule or send it."
-msgstr "Klik op <strong>Later doorgaan</strong> als u nog niet klaar bent om deze mailing in te plannen of te verzenden. Klik op de link <strong>Doorgaan</strong> in 'Concept- en niet-geplande mailings' wanneer u klaar bent om de mailing te verzenden of in te plannen."
+msgstr "Klik op <strong>Later verder gaan</strong> als u nog niet klaar bent om deze mailing in te plannen of te verzenden. Klik op de link <strong>Doorgaan</strong> in 'Concept- en niet-geplande mailings' wanneer u klaar bent om de mailing te verzenden of in te plannen."
 
 #: templates/CRM/Mailing/Form/Schedule.hlp
 msgid ""
