--- a/po/pt_BR/admin.po
+++ b/po/pt_BR/admin.po
@@ -11,7 +11,7 @@
 # drero <dreroips@yahoo.com.br>, 2012
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2011,2013
 # EVANDRO PIRES <evandroprieto@gmail.com>, 2013
-# Finks Costa <finkseletronica28@gmail.com>, 2015
+# Finks Costa <finkseletronica28@gmail.com>, 2015-2016
 # Gilvanilson Santos <grupogvsantos@gmail.com>, 2016
 # Gustavo Rodrigues da Silva <gustavo.arjuna@gmail.com>, 2015
 # João Fagner Fonseca de Oliveira <fagworio@gmail.com>, 2016
@@ -27,8 +27,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-24 15:35+0000\n"
-"Last-Translator: Gilvanilson Santos <grupogvsantos@gmail.com>\n"
+"PO-Revision-Date: 2016-06-26 06:07+0000\n"
+"Last-Translator: Finks Costa <finkseletronica28@gmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/civicrm/civicrm/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1039,7 +1039,7 @@ msgstr "De Email"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit to"
-msgstr ""
+msgstr "Limitar a"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Also include"
@@ -1051,11 +1051,11 @@ msgstr "Limitar ou adicionar destinatários"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Limit Options"
-msgstr ""
+msgstr "Opções de Limite"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Recipient Roles"
-msgstr ""
+msgstr "Papéis dos Destinatários"
 
 #: CRM/Admin/Form/ScheduleReminders.php
 msgid "Manual Recipients"
@@ -6438,11 +6438,11 @@ msgstr "Nota: a etiqueta selecionada é usada por entidades adicionais."
 
 #: templates/CRM/Admin/Page/Tag.tpl
 msgid "Select a tag"
-msgstr ""
+msgstr "Selecionar Tags"
 
 #: CRM/Admin/Form/CMSUser.php
 msgid "Synchronize Complete"
-msgstr ""
+msgstr "Sincronização de Usuários com Contatos concluída."
 
 #: CRM/Admin/Form/Job.php
 msgid ""
