po: update po/ca_ES/common-base.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/common-base.po
+++ b/po/ca_ES/common-base.po
@@ -8,6 +8,7 @@
 # francescbassas <francesc@babu.cat>, 2013-2016
 # francescbassas <francesc@babu.cat>, 2013
 # francescbassas <francesc@babu.cat>, 2012-2013
+# ixiam <info@ixiam.com>, 2016
 # Marti Prat <m.prat@ixiam.com>, 2013-2014
 # Marti Prat <m.prat@ixiam.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
@@ -16,8 +17,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-21 10:06+0000\n"
-"Last-Translator: francescbassas <francesc@babu.cat>\n"
+"PO-Revision-Date: 2016-06-27 10:32+0000\n"
+"Last-Translator: ixiam <info@ixiam.com>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -145,40 +146,40 @@ msgstr "Nom ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "Deny ACL?"
-msgstr ""
+msgstr "Denegar ACL?"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Entity"
-msgstr ""
+msgstr "Entitat ACL"
 
 #: CRM/ACL/DAO/ACL.php CRM/Core/DAO/EntityTag.php
 #: CRM/Core/DAO/RecurringEntity.php
 msgid "Entity ID"
-msgstr ""
+msgstr "Identificador de l'entitat"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Operation"
-msgstr ""
+msgstr "Operació ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Object"
-msgstr ""
+msgstr "Objecte ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Object ID"
-msgstr ""
+msgstr "Identificació de l'objecte ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Table"
-msgstr ""
+msgstr "Taula ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Group ID"
-msgstr ""
+msgstr "Identificador del grup ACL"
 
 #: CRM/ACL/DAO/ACL.php
 msgid "ACL Is Active?"
-msgstr ""
+msgstr "Està activa l'ACL?"
 
 #: CRM/ACL/DAO/Cache.php CRM/Contact/BAO/Query.php CRM/Contact/DAO/Contact.php
 #: CRM/Core/BAO/ActionSchedule.php CRM/Core/DAO/Log.php
@@ -187,11 +188,11 @@ msgstr "Data de modificació"
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "Entity Role"
-msgstr ""
+msgstr "Rol de l'entitat"
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "ACL Role ID"
-msgstr ""
+msgstr "Identificador del rol de l'ACL"
 
 #: CRM/ACL/DAO/EntityRole.php CRM/Core/DAO/ActionLog.php
 #: CRM/Core/DAO/Discount.php CRM/Core/DAO/EntityFile.php
@@ -205,7 +206,7 @@ msgstr "Taula d'entitat"
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "ACL Entity ID"
-msgstr ""
+msgstr "Identificador de l'entitat ACL"
 
 #: CRM/ACL/DAO/EntityRole.php
 msgid "ACL Entity Role is Active"
@@ -432,7 +433,7 @@ msgstr ""
 
 #: CRM/ACL/Form/WordPress/Permissions.php
 msgid "Unsafe Permission Settings"
-msgstr ""
+msgstr "La configuració de permisos no és segura"
 
 #: CRM/ACL/Form/WordPress/Permissions.php
 msgid "Wordpress Access Control Updated"
@@ -662,23 +663,23 @@ msgstr "o"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity Result - %1"
-msgstr ""
+msgstr "Resultat de l'activitat - %1"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activities which have Followup Activities"
-msgstr ""
+msgstr "Activitats que tenen activitats de seguiment"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activities without Followup Activities"
-msgstr ""
+msgstr "Activitats sense activitats de seguiment"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activities which are Followup Activities"
-msgstr ""
+msgstr "Activitats que són activitats de seguiment"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activities which are not Followup Activities"
-msgstr ""
+msgstr "Activitats que no són activitats de seguiment"
 
 #: CRM/Activity/BAO/Query.php CRM/Contact/Form/Search/Criteria.php
 #: CRM/Core/BAO/CustomField.php CRM/Core/Form/Date.php CRM/Core/Form.php
@@ -774,7 +775,7 @@ msgstr "Identificador de l'activitat"
 
 #: CRM/Activity/DAO/Activity.php
 msgid "Source Record"
-msgstr ""
+msgstr "Origen del registre"
 
 #: CRM/Activity/DAO/Activity.php CRM/Activity/Import/Form/MapField.php
 msgid "Activity Type ID"
