po: update po/sv_SE/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sv_SE/menu.po
+++ b/po/sv_SE/menu.po
@@ -16,7 +16,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-15 10:52+0000\n"
+"PO-Revision-Date: 2016-06-27 09:41+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -2162,7 +2162,7 @@ msgstr "Betalningsformer"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "Konfigurera CKEditor"
 
 msgctxt "menu"
 msgid "Batch Merge Duplicate Contacts"
@@ -2198,17 +2198,17 @@ msgstr "Tillägg"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Details"
-msgstr ""
+msgstr "Åtgärdsdetaljer"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Summary"
-msgstr ""
+msgstr "Åtgärdssammanställning"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Shows activity statistics by type / date"
-msgstr ""
+msgstr "Visar åtgärdsstatistik per typ/datum."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
