--- a/po/sv_SE/common-base.po
+++ b/po/sv_SE/common-base.po
@@ -17,7 +17,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-15 10:54+0000\n"
+"PO-Revision-Date: 2016-06-27 09:41+0000\n"
 "Last-Translator: Thomas Nilsson <thomas.nilsson@responsive.se>\n"
 "Language-Team: Swedish (http://www.transifex.com/civicrm/civicrm/language/sv/)\n"
 "MIME-Version: 1.0\n"
@@ -23961,7 +23961,7 @@ msgstr ""
 
 #: xml/templates/languages.tpl
 msgid "Swedish"
-msgstr ""
+msgstr "Svenska"
 
 #: xml/templates/languages.tpl
 msgid "Tamil"
