po: update po/id_ID/common-components.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/id_ID/common-components.po
+++ b/po/id_ID/common-components.po
@@ -6,12 +6,13 @@
 # acepby <acepby@gmail.com>, 2011
 # Fery Setiawan <gembelweb@gmail.com>, 2015
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Risonly Simbolon <simbolon.risonly@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:37+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-29 04:48+0000\n"
+"Last-Translator: Risonly Simbolon <simbolon.risonly@gmail.com>\n"
 "Language-Team: Indonesian (http://www.transifex.com/civicrm/civicrm/language/id/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -213,7 +214,7 @@ msgstr "Unduh"
 #: CRM/Admin/Page/MessageTemplates.php ang/crmMailing/BlockMailing.html
 #: ang/crmMailingAB/BlockMailing.html
 msgid "Message Template"
-msgstr ""
+msgstr "Contoh Pesan"
 
 #: CRM/Admin/Page/Options.php templates/CRM/Admin/Page/APIExplorer.tpl
 #: templates/CRM/Contribute/Form/ContributionView.tpl
@@ -254,12 +255,12 @@ msgstr "Konfigurasi"
 #: CRM/Contribute/DAO/Widget.php
 #: CRM/Contribute/Form/ContributionPage/Widget.php
 msgid "About"
-msgstr ""
+msgstr "Tentang"
 
 #: ang/crmCxn/AboutCtrl.html ang/crmCxn/ConfirmConnectCtrl.html
 #: ang/crmCxn/ConfirmReconnectCtrl.html ang/crmCaseType/edit.html
 msgid "Advanced"
-msgstr ""
+msgstr "Lebih Lanjut"
 
 #: templates/CRM/Admin/Form/LocationType.tpl
 #: templates/CRM/Admin/Form/OptionGroup.tpl
@@ -318,7 +319,7 @@ msgstr "Apakah Aktif?"
 #: templates/CRM/Admin/Page/MessageTemplates.tpl
 #: ang/crmCaseType/activitySetDetails.html
 msgid "Workflow"
-msgstr ""
+msgstr "Alur Kerja"
 
 #: templates/CRM/Admin/Page/Navigation.tpl
 #: CRM/Financial/Form/FinancialType.php
@@ -327,7 +328,7 @@ msgstr "Tidak dapat Dihapus"
 
 #: templates/CRM/Admin/Page/Options.hlp ang/crmCaseType/edit.html
 msgid "Activity Types"
-msgstr ""
+msgstr "Jenis Aktifitas"
 
 #: templates/CRM/Admin/Page/Options.tpl templates/CRM/Report/Page/Options.tpl
 msgid ""
@@ -484,7 +485,7 @@ msgstr "Judul Laporan"
 
 #: CRM/Campaign/Form/Survey/TabHeader.php ang/crmMailingAB/ListCtrl.html
 msgid "Results"
-msgstr ""
+msgstr "Hasil"
 
 #: CRM/Campaign/Form/Survey.php CRM/Contribute/Form/ContributionPage.php
 #: CRM/Event/Form/ManageEvent.php
@@ -792,7 +793,7 @@ msgstr "Lihat Pembayaran"
 #: xml/templates/message_templates/membership_online_receipt_html.tpl
 #: xml/templates/message_templates/membership_online_receipt_text.tpl
 msgid "Credit Card Information"
-msgstr ""
+msgstr "Informasi Kartu Kredit"
 
 #: CRM/Contribute/Form/AdditionalPayment.php
 #: templates/CRM/Contribute/Page/Tab.hlp templates/CRM/Pledge/Page/Payment.hlp
@@ -1075,7 +1076,7 @@ msgstr "Neraca Hutang"
 #: templates/CRM/Contribute/Form/Contribution.tpl
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "loading"
-msgstr ""
+msgstr "memuat"
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
@@ -1977,7 +1978,7 @@ msgstr "Pilih jenis finansial yang sesuai untuk pembayaran ini."
 #: templates/CRM/Event/Form/ManageEvent/EventInfo.hlp
 #: ang/crmMailing/BlockMailing.html ang/crmMailingAB/BlockMailing.html
 msgid "Template"
-msgstr ""
+msgstr "Contoh"
 
 #: templates/CRM/Event/Form/ManageEvent/Repeat.tpl
 #: templates/CRM/Event/Page/ManageEvent.tpl templates/CRM/PCP/Page/PCP.tpl
@@ -2123,7 +2124,7 @@ msgstr ""
 #: ang/crmMailing/EditMailingCtrl/workflow.html
 #: templates/CRM/PCP/Form/Contribute.hlp
 msgid "Approval"
-msgstr ""
+msgstr "Persetujuan"
 
 #: templates/CRM/Mailing/Page/Report.tpl CRM/Report/Form/Mailing/Clicks.php
 #: CRM/Report/Form/Mailing/Summary.php
@@ -2212,16 +2213,16 @@ msgstr ""
 #: CRM/Contribute/Form/Contribution/Main.php CRM/Event/Form/Participant.php
 #: CRM/Member/Form/Membership.php CRM/Member/Form/MembershipRenewal.php
 msgid "Payment Method is a required field."
-msgstr ""
+msgstr "Metode Pembayaran adalah Isian Wajib"
 
 #: CRM/Contribute/Form/Contribution.php CRM/Member/Form/Membership.php
 msgid "You do not have all the permissions needed for this page."
-msgstr ""
+msgstr "Anda tidak memiliki ijin untuk membuka halaman ini"
 
 #: CRM/Contribute/Form/Task/PickProfile.php
 #: CRM/Member/Form/Task/PickProfile.php
 msgid "Update multiple records error"
-msgstr ""
+msgstr "Ubah kesalahan beberapa data"
 
 #: templates/CRM/Contribute/Form/Contribution/Confirm.tpl
 #: templates/CRM/Contribute/Form/Contribution/ThankYou.tpl
@@ -2232,17 +2233,17 @@ msgstr ""
 #: templates/CRM/Contribute/Form/ContributionPage/PCP.hlp
 #: CRM/PCP/DAO/PCPBlock.php
 msgid "Notification Email"
-msgstr ""
+msgstr "Email Notifikasi"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Median"
-msgstr ""
+msgstr "Pertengahan"
 
 #: templates/CRM/Contribute/Page/ContributionTotals.tpl
 #: CRM/Report/Form/Contribute/Summary.php
 msgid "Mode"
-msgstr ""
+msgstr "Mode"
 
 #: CRM/Event/Form/ManageEvent/TabHeader.php CRM/Event/Page/ManageEvent.php
 #: templates/CRM/Event/Form/ManageEvent/Tab.hlp
@@ -2250,19 +2251,19 @@ msgstr ""
 #: templates/CRM/Event/Form/ParticipantView.tpl
 #: CRM/Report/Form/Contribute/Detail.php
 msgid "Fees"
-msgstr ""
+msgstr "Biaya"
 
 #: CRM/Event/Form/SelfSvcUpdate.php CRM/Report/Form/Case/Demographics.php
 msgid "-select-"
-msgstr ""
+msgstr "-pilih-"
 
 #: CRM/Mailing/DAO/Mailing.php CRM/Report/Form/Mailing/Summary.php
 msgid "Mailing ID"
-msgstr ""
+msgstr "ID Surat-menyurat"
 
 #: CRM/Mailing/Selector/Browse.php CRM/Report/Form/Contribute/RecurSummary.php
 msgid "Started"
-msgstr ""
+msgstr "Dimulai"
 
 #: templates/CRM/Mailing/Page/Report.tpl CRM/Report/Form/Mailing/Summary.php
 msgid "Unique Opens"
