po: update po/ru_RU/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ru_RU/campaign.po
+++ b/po/ru_RU/campaign.po
@@ -12,8 +12,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-06-28 09:16+0000\n"
+"Last-Translator: Фёдор Ходьков <fkhodkov@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -310,7 +310,7 @@ msgstr "Найти респондентов для %1"
 
 #: CRM/Campaign/Form/Search.php CRM/Campaign/Form/Task/Interview.php
 msgid "Record %1 Responses"
-msgstr "Зарегистрировать %1 ответов"
+msgstr "Записать ответы на %1"
 
 #: CRM/Campaign/Form/Search.php
 msgid "Find Respondents"
