--- a/po/ru_RU/common-base.po
+++ b/po/ru_RU/common-base.po
@@ -29,7 +29,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-06-24 10:47+0000\n"
+"PO-Revision-Date: 2016-06-28 09:16+0000\n"
 "Last-Translator: Фёдор Ходьков <fkhodkov@gmail.com>\n"
 "Language-Team: Russian (http://www.transifex.com/civicrm/civicrm/language/ru/)\n"
 "MIME-Version: 1.0\n"
@@ -639,7 +639,7 @@ msgstr "%1 %2 %3"
 
 #: CRM/Activity/BAO/Query.php xml/templates/civicrm_data.tpl
 msgid "Survey"
-msgstr "Обзор"
+msgstr "Опрос"
 
 #: CRM/Activity/BAO/Query.php
 msgid "Activity created by"
