po: update po/hu_HU/campaign.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/hu_HU/campaign.po
+++ b/po/hu_HU/campaign.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 20:06+0000\n"
+"PO-Revision-Date: 2016-06-29 19:36+0000\n"
 "Last-Translator: Zoltán Reizinger <zreizinger@hdsnet.hu>\n"
 "Language-Team: Hungarian (http://www.transifex.com/civicrm/civicrm/language/hu/)\n"
 "MIME-Version: 1.0\n"
@@ -1054,7 +1054,7 @@ msgstr "Köszönöm hogy aláírtad ezt a petíciót."
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid "STEP 2: Please Check Your Email"
-msgstr "2. lépés: Kérlek ellenőrizd az emailed"
+msgstr "2. lépés: Kérem ellenőrizze az e-mailjét"
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid ""
@@ -1077,7 +1077,7 @@ msgstr "Mielőtt hozzáadhatnánk az alárásod, érvényesítened kell az email
 msgid ""
 "If you haven't received an email within a few minutes, please check your "
 "spam folder."
-msgstr "Ha nem kapod meg az email néhány percen belül, kérlek ellenőrizd a spam mappádat."
+msgstr "Ha nem kapja meg az e-mailt néhány percen belül, kérem ellenőrizze a spam mappáját."
 
 #: templates/CRM/Campaign/Page/Petition/ThankYou.tpl
 msgid ""
