--- a/po/ko_KR/common-base.po
+++ b/po/ko_KR/common-base.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Josh Kim <joshkkim@gmail.com>, 2013-2014
+# Young Jun Kim <young.j.kim0214@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:36+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-01 04:38+0000\n"
+"Last-Translator: Young Jun Kim <young.j.kim0214@gmail.com>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1069,7 +1070,7 @@ msgstr ""
 #: CRM/SMS/Form/Group.php CRM/SMS/Form/Schedule.php CRM/Tag/Form/Tag.php
 #: js/Common.js js/crm.ajax.js templates/CRM/Contact/Page/View/Summary.js
 msgid "Saved"
-msgstr ""
+msgstr "저장됨"
 
 #: CRM/Activity/Form/ActivityFilter.php CRM/Core/SelectValues.php
 msgid "Include"
@@ -1440,7 +1441,7 @@ msgstr ""
 #: templates/CRM/Contact/Page/View/Summary.tpl
 #: templates/CRM/Custom/Page/Option.tpl templates/CRM/Group/Form/Search.tpl
 msgid "Previous"
-msgstr ""
+msgstr "이전"
 
 #: CRM/Activity/Import/Form/MapField.php CRM/Contact/DAO/GroupContact.php
 #: CRM/Contact/Form/Search/Criteria.php
