po: update po/ko_KR/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ko_KR/menu.po
+++ b/po/ko_KR/menu.po
@@ -5,12 +5,13 @@
 # Translators:
 # JahyunRyu <koyulka@gmail.com>, 2015
 # Josh Kim <joshkkim@gmail.com>, 2013-2014
+# Young Jun Kim <young.j.kim0214@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 17:10+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-01 04:54+0000\n"
+"Last-Translator: Young Jun Kim <young.j.kim0214@gmail.com>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -296,7 +297,7 @@ msgstr "기부 가져오기"
 
 msgctxt "menu"
 msgid "AdditionalInfo Form"
-msgstr ""
+msgstr "추가정보 양식"
 
 msgctxt "menu"
 msgid "Cancel Subscription"
@@ -338,11 +339,11 @@ msgstr ""
 
 msgctxt "menu"
 msgid "PDF Invoice"
-msgstr ""
+msgstr "PDF 송장"
 
 msgctxt "menu"
 msgid "Email Invoice"
-msgstr ""
+msgstr "이메일 송장"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -497,7 +498,7 @@ msgstr "환경설정 검색"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Date Preferences"
-msgstr ""
+msgstr "날짜 환경설정"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1198,7 +1199,7 @@ msgstr "재 구독"
 
 msgctxt "menu"
 msgid "Opt-out"
-msgstr ""
+msgstr "탈퇴"
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1682,7 +1683,7 @@ msgstr "Civi보조금"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Grant Status"
-msgstr ""
+msgstr "보조금 상태"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1697,12 +1698,12 @@ msgstr "전체 보고서"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Support"
-msgstr ""
+msgstr "지원"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get started"
-msgstr ""
+msgstr "시작하기"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1712,27 +1713,27 @@ msgstr "문서화"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Ask a question"
-msgstr ""
+msgstr "질문하기"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Get expert help"
-msgstr ""
+msgstr "전문가에게 지원받기"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "About CiviCRM"
-msgstr ""
+msgstr "CiviCRM에 대해"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Register your site"
-msgstr ""
+msgstr "사이트 등록"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Join CiviCRM"
-msgstr ""
+msgstr "CiviCRM에 가입"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1856,7 +1857,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "LYBUNT (last year but not this year)"
-msgstr ""
+msgstr "LYBUNT (올해가 아닌 작년)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2113,7 +2114,7 @@ msgstr "열어본 메일"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Display contacts who opened emails from a mailing"
-msgstr ""
+msgstr "이메일 열어본 수신자 연락처 보기"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2151,7 +2152,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Payment Methods"
-msgstr ""
+msgstr "결제방법"
 
 msgctxt "menu"
 msgid "Configure CKEditor"
@@ -2163,7 +2164,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Insert CiviCRM Content"
-msgstr ""
+msgstr "CiviCRM 컨텐츠 입력"
 
 msgctxt "menu"
 msgid "Self-service Registration Update"
@@ -2176,7 +2177,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "System Status"
-msgstr ""
+msgstr "시스템 상태"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2191,17 +2192,17 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Details"
-msgstr ""
+msgstr "활동 상세내용"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Summary"
-msgstr ""
+msgstr "활동 요약"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Shows activity statistics by type / date"
-msgstr ""
+msgstr "유형/날짜에 의한 활동 내역 보기"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
