--- a/po/ko_KR/install.po
+++ b/po/ko_KR/install.po
@@ -3,12 +3,13 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Young Jun Kim <young.j.kim0214@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-05-09 16:48+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-01 05:08+0000\n"
+"Last-Translator: Young Jun Kim <young.j.kim0214@gmail.com>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -18,7 +19,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Please correct your install location"
-msgstr ""
+msgstr "웁스! 인스톨 위치를 확인해 주세요."
 
 #: install/index.php
 msgid ""
@@ -28,15 +29,15 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! CiviCRM is already installed"
-msgstr ""
+msgstr "웁스! CiviCRM이 이미 설치되어 있습니다."
 
 #: install/index.php
 msgid "[your Drupal root directory]"
-msgstr ""
+msgstr "[드루팔 루트 디렉터리]"
 
 #: install/index.php
 msgid "Installation Guide"
-msgstr ""
+msgstr "설치 가이드"
 
 #: install/index.php
 msgid ""
@@ -49,21 +50,21 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Incorrect CiviCRM version"
-msgstr ""
+msgstr "웁스! CiviCRM 버전이 잘못되었습니다."
 
 #: install/index.php
 msgid "This installer can only be used for the Drupal version of CiviCRM."
-msgstr ""
+msgstr "이 인스톨러는 드루팔 버전의 CiviCRM에서만 사용할 수 있습니다."
 
 #: install/index.php
 msgid "Oops! Incorrect Drupal version"
-msgstr ""
+msgstr "웁스! 드루팔 버전이 잘못되었습니다."
 
 #: install/index.php
 msgid ""
 "This version of CiviCRM can only be used with Drupal 6.x or 7.x. Please "
 "ensure that '%1' exists if you are running Drupal 7.0 and over."
-msgstr ""
+msgstr "이 버전의 CiviCRM은 드루팔 6.x 또는 7.x 버전에서만 사용할 수 있습니다. 드루팔 7.0 혹은 그 이상 버전을 사용하고 있다면 반드시 '%1'을 확인하세요"
 
 #: install/index.php
 msgid "This installer can only be used for the WordPress version of CiviCRM."
@@ -330,11 +331,11 @@ msgstr ""
 
 #: install/index.php
 msgid "Could not login to the database."
-msgstr ""
+msgstr "데이터베이스에 로그인 할 수 없습니다."
 
 #: install/index.php
 msgid "Could not select the database."
-msgstr ""
+msgstr "데이터 베이스를 선택할 수 없습니다."
 
 #: install/index.php
 msgid "Could not create a temp table."
@@ -382,7 +383,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Able to create a new database."
-msgstr ""
+msgstr "새로운 데이터 베이스를 생성할 수 있습니다."
 
 #: install/index.php
 msgid "user '%1' doesn't have CREATE DATABASE permissions."
@@ -394,7 +395,7 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Could not create database %1"
-msgstr ""
+msgstr "웁스! 데이터 베이스를 생성할 수 없습니다 %1"
 
 #: install/index.php
 msgid ""
@@ -450,7 +451,7 @@ msgstr ""
 
 #: install/index.php
 msgid "<a %1>Refer to the online documentation for more information</a>"
-msgstr ""
+msgstr "<a %1> 더 자세한 내용은 온라인 문서를 참조하세요</a>"
 
 #: install/template.html
 msgid "CiviCRM Installer"
@@ -458,7 +459,7 @@ msgstr "CiviCRM 설치자"
 
 #: install/template.html
 msgid "Version %1"
-msgstr ""
+msgstr "버전 %1"
 
 #: install/template.html
 msgid ""
@@ -518,7 +519,7 @@ msgstr "언어 변경"
 
 #: install/template.html
 msgid "Database Version and Connection Settings"
-msgstr ""
+msgstr "데이터베이스 버전 및 연결 설정"
 
 #: install/template.html
 msgid ""
@@ -570,16 +571,16 @@ msgstr "기타 설정"
 
 #: install/template.html
 msgid "Re-check requirements"
-msgstr ""
+msgstr "사양을 다시 확인하세요"
 
 #: install/template.html
 msgid "CiviCRM Database Details"
-msgstr ""
+msgstr "CiviCRM 데이터베이스 상세정보"
 
 #: install/template.html
 msgid "Drupal Database Details"
-msgstr ""
+msgstr "드루팔 데이터 상세정보"
 
 #: install/template.html
 msgid "Requirements"
-msgstr ""
+msgstr "사양"
