--- a/po/ko_KR/countries.po
+++ b/po/ko_KR/countries.po
@@ -4,12 +4,13 @@
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
 # Josh Kim <joshkkim@gmail.com>, 2013-2014
+# Young Jun Kim <young.j.kim0214@gmail.com>, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-05-08 17:05-0400\n"
-"PO-Revision-Date: 2016-05-08 22:32+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-07-01 05:29+0000\n"
+"Last-Translator: Young Jun Kim <young.j.kim0214@gmail.com>\n"
 "Language-Team: Korean (Korea) (http://www.transifex.com/civicrm/civicrm/language/ko_KR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1027,7 +1028,7 @@ msgstr "큐라"
 
 msgctxt "country"
 msgid "Sint Maarten (Dutch Part)"
-msgstr "신트 마틴 (네덜란드 부분)"
+msgstr "신트 마르턴(네덜란드 령)"
 
 msgctxt "country"
 msgid "Bonaire, Saint Eustatius and Saba"
@@ -1039,8 +1040,8 @@ msgstr "코소보"
 
 msgctxt "country"
 msgid "Saint Barthélemy"
-msgstr ""
+msgstr "생바르텔레미"
 
 msgctxt "country"
 msgid "Saint Martin (French part)"
-msgstr ""
+msgstr "생마르탱(프랑스령)"
